--- a/universal-converter/Cargo.toml
+++ b/universal-converter/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "universal-converter"
 version = "0.1.0"
-authors = ["Mo Kweon <kkweon@google.com>"]
+authors = ["Mo Kweon <kkweon@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
